<resources>
    <string name="app_name">AndroidApp01</string>
    <string name="your_albums">Your Albums</string>
    <string name="add_album">Add album</string>
    <string name="create_album">Create Album</string>
    <string name="album_name">Album Name</string>
    <string name="selected_photos">Selected Photos</string>
    <string name="add_photos">Add Photos</string>
    <string name="save_album">Save Album</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="album_cover">Album Cover</string>
    <string name="delete_album">Delete</string>
    <!-- Add these to your strings.xml file -->
    <string name="search_photos">Search Photos</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="search_and">AND</string>
    <string name="search_or">OR</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="no_results_found">No matching photos found</string>
</resources>